--- a/Matplotlib/Viz-1.ipynb
+++ b/Matplotlib/Viz-1.ipynb
@@ -11,7 +11,9 @@
     "3. Pie Charts\n",
     "4. Stack Plots\n",
     "5. Histograms\n",
-    "6. "
+    "6. Scatter plots\n",
+    "7. Time series Data\n",
+    "8. Subplots"
    ]
   },
   {
